[gd_scene load_steps=3 format=3 uid="uid://bj8v4yw3hx5m2"]

[ext_resource type="Script" path="res://scripts/ui/training_slot_card.gd" id="1_training_slot"]
[ext_resource type="PackedScene" uid="uid://57erx6jtexcf" path="res://assets/Icons/dragons/dragon-base.tscn" id="2_dragon_visual"]

[node name="TrainingSlotCard" type="PanelContainer"]
custom_minimum_size = Vector2(320, 200)
script = ExtResource("1_training_slot")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="DragonVisualContainer" type="CenterContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="DragonVisual" parent="VBox/DragonVisualContainer" instance=ExtResource("2_dragon_visual")]
position = Vector2(160, 30)
scale = Vector2(0.06, 0.06)

[node name="DragonInfo" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="VBox/DragonInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Dragon Name"
horizontal_alignment = 1

[node name="LevelContainer" type="HBoxContainer" parent="VBox/DragonInfo"]
layout_mode = 2
alignment = 1

[node name="LevelLabel" type="Label" parent="VBox/DragonInfo/LevelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Lv 1"

[node name="TargetLevelLabel" type="Label" parent="VBox/DragonInfo/LevelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "→ Lv 2"

[node name="ProgressContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ProgressBar" type="ProgressBar" parent="VBox/ProgressContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="VBox/ProgressContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0%"
horizontal_alignment = 1

[node name="StatsGains" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="ATKLabel" type="Label" parent="VBox/StatsGains"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "ATK +5"

[node name="HPLabel" type="Label" parent="VBox/StatsGains"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "HP +15"

[node name="SPDLabel" type="Label" parent="VBox/StatsGains"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "SPD +2"

[node name="TimerLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "⏱ 2h 15m"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="RemoveButton" type="Button" parent="VBox/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove"

[node name="RushButton" type="Button" parent="VBox/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rush (50g)"

[node name="AssignButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Assign Dragon"

[node name="CollectButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "COLLECT"

[node name="NoDragonLabel" type="Label" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 11
text = "Click to Assign Dragon"
horizontal_alignment = 1
vertical_alignment = 1
